A small change made for check

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Coursera</title>
 </head>
 <body>
-<h1>Coursera Course is Great</h1>
+<h1>Coursera Course is Great and this a second change</h1>
 </body>
 </html>
